[package]
author = "Alexander Efremkin <kriolyth@gmail.com>"
edition = "2018"
license = "Apache-2.0"
name = "grumpc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8"
tokio = {version = "1", features = ["full"]}
tonic = {version = "0.5", features = ["prost"]}
tracing = "0.1.28"
chrono = "0.4.19"

[build-dependencies]
tonic-build = {version = "0.5.2", features = ["prost"]}
