[package]
authors = ["Alexander Efremkin <kriolyth@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
name = "grumpc"
version = "0.1.0"

[dependencies]
prost = "0.8"
tokio = {version = "1", features = ["full"]}
tonic = {version = "0.5", features = ["prost"]}
tracing = "0.1"
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
tonic-build = {version = "0.5.2", features = ["prost"]}
